--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview"
     },
     "extra": {
         "laravel": {
